@@ -1,5 +1,6 @@
 Version 2.02.57 -
 ====================================
+ Switch status from 32-bit to 64-bit.
 
 Version 2.02.56 - 24th November 2009
 ====================================
